--- a/root/task-3 - component based/flowbite_html_project/src/index_3.html
+++ b/root/task-3 - component based/flowbite_html_project/src/index_3.html
@@ -43,10 +43,10 @@
   </head>
 
   <body class="-bg-[black] w-full flex flex-col items-center">
-    <header
+    <!-- <header
       id="nav-container"
       class="z-40 bg-[#F8EFE8] text-black w-full h-fit fixed"
-    ></header>
+    ></header> -->
 
     <main
       class="z-2 bg-[white] text-black w-full max-w-[1440px] h-fit mt-[72px] px-6 w825:px-12 flex flex-col items-center"
@@ -68,7 +68,7 @@
                 <div class="-bg-[red] w-fit h-fit gap-4 flex items-center">
                   <img
                     class="w-12 h-12 rounded-full"
-                    src="images/user-photo.png"
+                    src="temp_images/user-photo.png"
                     alt="Rounded avatar"
                   />
                   <div class="-bg-[green] w-full h-fit font-medium text-[18px]">
@@ -78,14 +78,14 @@
                 <div class="w-fit h-fit gap-8 flex items-center">
                   <button
                     onclick=""
-                    class="cursor-pointer w-fit h-fit flex items-center gap-x-2 rounded-sm text-[#470001]"
+                    class="cursor-pointer w-fit h-fit flex items-center gap-2 rounded-sm text-[#470001]"
                   >
                     <img src="images/share2.svg" alt="share icon" />
                     Share
                   </button>
                   <button
                     onclick=""
-                    class="cursor-pointer w-fit h-fit flex items-center gap-x-2 rounded-sm text-[#C93636]"
+                    class="cursor-pointer w-fit h-fit flex items-center gap-2 rounded-sm text-[#C93636]"
                   >
                     <img src="images/delete.svg" alt="delete icon" />
                     Delete
@@ -148,12 +148,12 @@
           </div>
           <div class="w-full h-fit px-8 gap-6 divide-y-2 divide-[#E8E8E8]">
             <div
-              class="-bg-[red] w-full h-fit pt-[16px] pb-[32px] px-[24px] gap-x-10 flex items-center"
+              class="-bg-[red] w-full h-fit pt-[16px] pb-[32px] px-[24px] gap-10 flex items-center"
             >
               <div class="-bg-[blue] w-[900px] h-fit gap-8 flex items-center">
                 <img
                   class="w-12 h-12 rounded-full"
-                  src="images/user-photo.png"
+                  src="temp_images/user-photo.png"
                   alt="Rounded avatar"
                 />
                 <div
@@ -165,7 +165,7 @@
                   >
                     KURIO name
                   </div>
-                  <p
+                  <div
                     class="-bg-[lightgreen] w-full h-fit line-clamp-2 leading-[150%] tracking-[-1%]"
                   >
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
@@ -174,17 +174,17 @@
                     ullamco laboris nisi ut aliquip ex ea commodo consequat.
                     Duis aute irure dolor in reprehenderit in voluptate velit
                     esse cillum dolore eu fugiat nulla pariatur.
-                  </p>
+                  </div>
                 </div>
               </div>
             </div>
             <div
-              class="-bg-[red] w-full h-fit pt-[16px] pb-[32px] px-[24px] gap-x-10 flex items-center"
+              class="-bg-[red] w-full h-fit pt-[16px] pb-[32px] px-[24px] gap-10 flex items-center"
             >
               <div class="-bg-[blue] w-[900px] h-fit gap-8 flex items-center">
                 <img
                   class="w-12 h-12 rounded-full"
-                  src="images/user-photo.png"
+                  src="temp_images/user-photo.png"
                   alt="Rounded avatar"
                 />
                 <div
@@ -196,7 +196,7 @@
                   >
                     KURIO name
                   </div>
-                  <p
+                  <div
                     class="-bg-[lightgreen] w-full h-fit line-clamp-2 leading-[150%] tracking-[-1%]"
                   >
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
@@ -205,7 +205,7 @@
                     ullamco laboris nisi ut aliquip ex ea commodo consequat.
                     Duis aute irure dolor in reprehenderit in voluptate velit
                     esse cillum dolore eu fugiat nulla pariatur.
-                  </p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -214,10 +214,10 @@
       </div>
     </main>
 
-    <script
+    <!-- <script
       src="scripts/component-loader.js"
       data-component-path="components/navbar"
       data-container-id="nav-container"
-    ></script>
+    ></script> -->
   </body>
 </html>
